--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     ]
   },
   "proxy": "http://localhost:5000",
-  "homepage": "https://myusername.github.io",
+  "homepage": "https://davedushi.github.io",
   "devDependencies": {
     "daisyui": "^4.11.1",
     "tailwindcss": "^3.4.3"
